apps/teslamate/mosquitto/networkpolicies/ingress-teslamate-mosquitto.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-teslamate-mosquitto
  namespace: teslamate
spec:
  selector: app == 'teslamate-mosquitto'
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      source:
        selector: app == 'teslamate'
      destination:
        ports:
          - 1883
    - action: Allow
      protocol: TCP
      source:
        nets:
          - 192.168.1.114/32
      destination:
        ports:
          - 1883
